Add shift details and remove shift

--- a/src/app/dynamic-shift-form/dynamic-shift-form.component.html
+++ b/src/app/dynamic-shift-form/dynamic-shift-form.component.html
@@ -6,7 +6,9 @@
     </div>
     
     <div class="form-row">
+      <!-- <button type="submit" [disabled]="!form.valid">Save</button> -->
       <button type="submit" [disabled]="!form.valid">Save</button>
+
    </div>
 
   </form>
