--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <h1>Shift List</h1>
-<div class="grid grid-pad">
-  <a *ngFor="let shift of shifts" class="col-1-4">
-    <div>
-      <h2>Shift</h2>
-      <h4>Crew member assigned: {{shift.crewMember.name}}</h4>
-      <h4>Starts at {{shift.weekDay.name}}</h4>
-      <h4>Duration {{shift.duration}} days</h4>
+<ul class="shift">
+  <li *ngFor="let shift of shifts" class="col-1-4">
+    <a  routerLink='/shift-detail/{{shift.shiftId}}'>
+      <span class="badge">{{shift.shiftId}}</span>
+      <span>{{shift.crewMember.name}} at {{shift.weekDay.name}}</span>
+    </a>
+    <button class="delete" title="delete shift"
+      (click)="deleteShift(shift)">x</button>
+  </li>
+</ul>
 
-    </div>
-  </a>
-</div>
