Add members list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<div>
+    <h1>{{title}}</h1>
+    <nav>
+        <a routerLink="/dashboard">Dashboard</a>
+        <a routerLink="/add-shift" >Add shift</a>
+        <a routerLink="/members" >Members</a>
 
+    </nav>
+    <!--<app-dynamic-shift-form></app-dynamic-shift-form>-->
+    <router-outlet></router-outlet>
+</div>
