--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,3 +1,11 @@
-<p>
-  members works!
-</p>
+<h2>Members List</h2>
+
+<ul class="member">
+  <li *ngFor="let member of members" class="col-1-4">
+    <a >
+      <span class="badge">{{member.id}}</span>
+      <span>{{member.name}}</span>
+    </a>
+    
+  </li>
+</ul>
