Shift to ShiftDTO and change project structure

--- a/src/app/shift-details/shift-details.component.html
+++ b/src/app/shift-details/shift-details.component.html
@@ -2,9 +2,6 @@
 
 <div *ngIf="shift">
 
-    <app-dynamic-shift-form [properties]="properties" 
-        [update]="true" 
-        [shift]="shift">
-    </app-dynamic-shift-form>
+    <app-update-shift-form [properties]="properties" [shift]="shift"></app-update-shift-form>   
     
 </div>
