--- a/src/app/add-shift/add-shift.component.html
+++ b/src/app/add-shift/add-shift.component.html
@@ -1,3 +1,3 @@
 <h3>Add shift Page</h3>
 
-<app-dynamic-shift-form [update]="false" [properties]="properties"></app-dynamic-shift-form>
+<app-add-shift-form [properties]="properties"></app-add-shift-form>
