Add validation shift page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
         <a routerLink="/dashboard">Dashboard</a>
         <a routerLink="/add-shift" >Add shift</a>
         <a routerLink="/members" >Members</a>
+        <a routerLink="/validate-shifts" >Validate</a>
 
     </nav>
     <!--<app-dynamic-shift-form></app-dynamic-shift-form>-->
