--- a/src/app/shift-details/shift-details.component.html
+++ b/src/app/shift-details/shift-details.component.html
@@ -2,6 +2,6 @@
 
 <div *ngIf="shift">
 
-    <app-update-shift-form [properties]="properties" [shift]="shift"></app-update-shift-form>   
+    <app-update-shift-form  [shift]="shift"></app-update-shift-form>   
     
 </div>
